# llama-kotlin-android

./: README.md  settings.gradle.kts
app/: build.gradle.kts  consumer-rules.pro
app/src/androidTest/java/com/llamakotlin/android/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  llama_context_wrapper.cpp
app/src/main/java/com/llamakotlin/android/: LlamaConfig.kt  LlamaModel.kt  LlamaNative.kt
app/src/main/java/com/llamakotlin/android/exception/: LlamaException.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/llamakotlin/android/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
sample/src/main/java/com/llamakotlin/sample/: MainActivity.kt
sample/src/main/res/layout/: activity_main.xml
